// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CtaButton /> renders without crashing 1`] = `
<button
  className="Cta__CtaButton-h8nk1r-1 jGepGh"
  onClick={[Function]}
>
  Create Team
</button>
`;

exports[`<CtaButton /> when secondary prop is passed renders without crashing 1`] = `
<button
  className="Cta__CtaButton-h8nk1r-1 xiPHX"
  onClick={[Function]}
>
  Create Team
</button>
`;

exports[`<CtaButton /> when small prop is passed renders without crashing 1`] = `
<button
  className="Cta__CtaButton-h8nk1r-1 eZsTTf"
  onClick={[Function]}
>
  Create Team
</button>
`;

exports[`<CtaInternalLink /> renders without crashing 1`] = `
<a
  className="Cta__CtaInternalLink-h8nk1r-0 jNQDYG"
  href="/dashboard"
  onClick={[Function]}
>
  Dashboard
</a>
`;

exports[`<CtaInternalLink /> when secondary prop is passed renders without crashing 1`] = `
<a
  className="Cta__CtaInternalLink-h8nk1r-0 dRNexZ"
  href="/dashboard"
  onClick={[Function]}
  secondary={true}
>
  Dashboard
</a>
`;

exports[`<CtaInternalLink /> when small prop is passed renders without crashing 1`] = `
<a
  className="Cta__CtaInternalLink-h8nk1r-0 kBeNCv"
  href="/dashboard"
  onClick={[Function]}
  small={true}
>
  Dashboard
</a>
`;
